@@ -148,8 +148,7 @@ fun print_ast_translation (a, (txt, pos)) =
 fun typed_print_translation (a, (txt, pos)) =
   ML_Lex.read pos txt
   |> ML_Context.expression pos
-    ("val typed_print_translation: (string * (" ^ advancedT a ^
-      "bool -> typ -> term list -> term)) list")
+    ("val typed_print_translation: (string * (" ^ advancedT a ^ "typ -> term list -> term)) list")
     ("Context.map_theory (Sign.add_" ^ advancedN a ^ "trfunsT typed_print_translation)")
   |> Context.theory_map;
 
